# gptoss-profiling

./: README.md  model.py  pyproject.toml
notebooks/: gpt_oss_reference_profile.ipynb
profiling/: __init__.py  reference.py
subnetworks/: __init__.py  attention_av_out_block.py  attention_block.py  attention_qk_softmax_block.py  attention_qkv_block.py  attention_sdpa_block.py  compile_all_smoke.py  head_block.py  moe_block.py  moe_mlp1_block.py  moe_mlp2_block.py  run_subnetwork_smoke.py  transformer_block.py
